logs/watchdog_20251012_1445.log
[12/10/2025 14:45:01,67] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 14:45:01,94] END WATCHDOG 
